--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
  <link rel="icon" href="favicon.ico">	
  
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/grid.css">				
+  <link rel="stylesheet" href="css/grid.css">
+
+  <link href='http://fonts.googleapis.com/css?family=Bitter' rel='stylesheet' type='text/css'>	
+  		
   <link rel="stylesheet" href="css/styles.css">	
 	
 </head>
