messing with heading

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/grid.css">
 
   <link href='http://fonts.googleapis.com/css?family=Bitter' rel='stylesheet' type='text/css'>	
-  		
+
   <link rel="stylesheet" href="css/styles.css">	
 	
 </head>
@@ -20,6 +20,8 @@
 		
 		<!-- Your Content -->
 		<h1>Katie Dunn</h1>
+
+		<p>Likes frogs.</p>
 
 		<!-- Clearfix -->
 		<div class="clear"></div>
