--- a/index.html
+++ b/index.html
@@ -21,13 +21,17 @@
 		<!-- Your Content -->
 		<h1>Katie Dunn</h1>
 
-		<p>Likes frogs.</p>
+		
 
 		<!-- Clearfix -->
 		<div class="clear"></div>
 
 	</div>
-	
+
+
+	<img src="img/me.jpeg">
+
+	<p>Likes frogs.</p>
   
 </body>
 </html>
