--- a/index.html
+++ b/index.html
@@ -15,23 +15,25 @@
 	
 </head>
 <body>
-	
+
+<!-- No content before -->
 	<div class="container showgrid">
 		
 		<!-- Your Content -->
 		<h1>Katie Dunn</h1>
 
-		
+		<img src="img/me.jpeg">
 
+	<p>Likes frogs.</p>
+
+<!-- No content after -->
 		<!-- Clearfix -->
 		<div class="clear"></div>
 
 	</div>
 
 
-	<img src="img/me.jpeg">
-
-	<p>Likes frogs.</p>
+	
   
 </body>
 </html>
