--- a/index.html
+++ b/index.html
@@ -19,8 +19,21 @@
 <!-- No content before -->
 	<div class="container showgrid">
 		
-		<!-- Your Content -->
-		<h1>Katie Dunn</h1>
+		<!-- First Column-->
+		<div>
+			<h1>Katie Dunn</h1>
+			<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+		</div>
+		
+
+			
+		<!-- Second Column -->
 
 		<img src="img/me.jpeg">
 
