--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<div class="container showgrid">
 		
 		<!-- First Column-->
-		<div>
+		<div class="grid_6 alpha">
 			<h1>Katie Dunn</h1>
 			<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -32,10 +32,12 @@
 		</div>
 		
 
-			
-		<!-- Second Column -->
 
-		<img src="img/me.jpeg">
+		<!-- Second Column -->
+		<div class="grid_6 omega">
+			<iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/7731970&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+		</div>
+
 
 	<p>Likes frogs.</p>
 
