--- a/index.html
+++ b/index.html
@@ -41,6 +41,25 @@
 
 	<p>Likes frogs.</p>
 
+		<!-- Second Row, First Column -->
+		<div class="grid_4 alpha">
+			<h3>Map</h3>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30652.136867441033!2d-117.90340338757312!3d48.53777393787007!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5362878add7b8c51%3A0x6fe5d8110f829d68!2sColville%2C+WA+99114!5e1!3m2!1sen!2sus!4v1412889483559" width="320" height="320" frameborder="0" style="border:0"></iframe>
+		</div>
+			
+
+		<!-- Second Row, Second Column -->
+		<div class="grid_4">
+			<h3>Video</h3>
+			<iframe width="100%" height="100%" src="/https://www.youtube.com/watch?v=WUhOnX8qt3I" frameborder="0" allowfullscreen></iframe>
+		</div>
+			
+
+		<!-- Second Row, Third Column -->
+		<div class="grid_4 omega">
+			<h3>Additional Info</h3>
+		</div>
+
 <!-- No content after -->
 		<!-- Clearfix -->
 		<div class="clear"></div>
