--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<!-- Second Row, Second Column -->
 		<div class="grid_4">
 			<h3>Video</h3>
-			<iframe width="100%" height="100%" src="https://www.youtube.com/watch?v=WUhOnX8qt3I" frameborder="0" allowfullscreen></iframe>
+			<iframe width="100%" height="315" src="//www.youtube.com/embed/WUhOnX8qt3I" frameborder="0" allowfullscreen></iframe>
 		</div>
 			
 
