--- a/index.html
+++ b/index.html
@@ -20,7 +20,18 @@
 	<div class="container showgrid">
 		
 		<!-- First Column-->
+
 		<div class="grid_6 alpha">
+			<h1>Bio</h1>
+			<img src="http://img1.wikia.nocookie.net/__cb20121116001418/barney/images/f/f9/99455_Floating_Frog_on_a_Log_In_Use_Image.jpg">
+
+		</div>
+
+
+		<!-- Second Column in first rom-->
+
+
+		<div class="grid_6 omega">
 			<h1>Katie Dunn</h1>
 			<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -30,16 +41,13 @@
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 		</div>
-		
+	
 
 
 		<!-- Second Column -->
 		<div class="grid_6 omega">
 			<iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/7731970&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
 		</div>
-
-
-	<p>Likes frogs.</p>
 
 		<!-- Second Row, First Column -->
 		<div class="grid_4 alpha">
