--- a/index.html
+++ b/index.html
@@ -21,17 +21,28 @@
 		
 		<!-- First Column-->
 
-		<div class="grid_6 alpha">
+		<div class="grid_8 alpha">
 			<h1>Bio</h1>
 			<img src="http://img1.wikia.nocookie.net/__cb20121116001418/barney/images/f/f9/99455_Floating_Frog_on_a_Log_In_Use_Image.jpg">
 
 		</div>
 
 
-		<!-- Second Column in first rom-->
+		<!-- Second Column in first row-->
+		<div class="grid_4 omega">
 
+		<h1>Something small</h1>
+		<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
 
-		<div class="grid_6 omega">
+ <!-- Second row, first column -->
+
+		<div class="grid_6 alpha">
 			<h1>Katie Dunn</h1>
 			<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -43,31 +54,50 @@
 		</div>
 	
 
+<!-- Second Row, second column -->
+		
+	<div class="grid_3">
+		<h3>Additional Info</h3>
 
-		<!-- Second Column -->
-		<div class="grid_6 omega">
-			<iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/7731970&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-		</div>
+		<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-		<!-- Second Row, First Column -->
-		<div class="grid_4 alpha">
+		<!-- Third Row, Second Colum -->
+		<div class="grid_3 omega">
+			<h1>My Places</h1>
+
+		<ul>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+	</div>
+
+		<!-- Third Row, First Column -->
+
+
+<!-- Second Row Second Column -->
+		<div class="grid_4">
 			<h3>Map</h3>
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30652.136867441033!2d-117.90340338757312!3d48.53777393787007!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5362878add7b8c51%3A0x6fe5d8110f829d68!2sColville%2C+WA+99114!5e1!3m2!1sen!2sus!4v1412889483559" width="320" height="320" frameborder="0" style="border:0"></iframe>
 		</div>
 			
 
-		<!-- Second Row, Second Column -->
-		<div class="grid_4">
+		<!-- Second Row, Third Column -->
+		
+		<div class="grid_4 alpha">
+			<iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/7731970&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+		</div>
+
+<!-- Third Row, second column -->
+	<div class="grid_4">
 			<h3>Video</h3>
 			<iframe width="100%" height="315" src="//www.youtube.com/embed/WUhOnX8qt3I" frameborder="0" allowfullscreen></iframe>
 		</div>
-			
-
-		<!-- Second Row, Third Column -->
-		<div class="grid_4 omega">
-			<h3>Additional Info</h3>
-		</div>
-
 <!-- No content after -->
 		<!-- Clearfix -->
 		<div class="clear"></div>
