--- a/index.html
+++ b/index.html
@@ -16,6 +16,44 @@
 </head>
 <body>
 
+
+This is me
+
+My name is Katie Dunn and I turned 21 this year.
+I hail from Colville, a small town north of Spokane Washington.
+In my free time I work on stories, doodle with my sister, watch show with my boyfriend and crush darkspawn in Ferelden. 
+
+Editorial Journalism is my major and my minor is Visual Communications Design. I chose Visual Communication Design for my minor because I wanted to  
+
+
+"QUOTE"
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <!-- No content before -->
 	<div class="container showgrid">
 		
