--- a/index.html
+++ b/index.html
@@ -17,39 +17,10 @@
 <body>
 
 
-This is me
 
 My name is Katie Dunn and I turned 21 this year.
 I hail from Colville, a small town north of Spokane Washington.
-In my free time I work on stories, doodle with my sister, watch show with my boyfriend and crush darkspawn in Ferelden. 
-
-Editorial Journalism is my major and my minor is Visual Communications Design. I chose Visual Communication Design for my minor because I wanted to  
-
-
-"QUOTE"
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+In my free time I work on stories, doodle with my sister, watch shows with my boyfriend, and crush darkspawn in Ferelden. 
 
 
 
@@ -69,7 +40,7 @@ Editorial Journalism is my major and my minor is Visual Communications Design. I
 		<!-- Second Column in first row-->
 		<div class="grid_4 omega">
 
-		<h1>Something small</h1>
+		<h1>This is me</h1>
 		<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -82,12 +53,7 @@ Editorial Journalism is my major and my minor is Visual Communications Design. I
 
 		<div class="grid_6 alpha">
 			<h1>Katie Dunn</h1>
-			<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<p>I am majoring in Journalism with Visual Communications Design as my minor. I chose this minor because I thought it would teach me useful techniques for whatever job I find myself in after college.</p>
 
 		</div>
 	
@@ -119,22 +85,17 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 
 <!-- Second Row Second Column -->
-		<div class="grid_4">
-			<h3>Map</h3>
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30652.136867441033!2d-117.90340338757312!3d48.53777393787007!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5362878add7b8c51%3A0x6fe5d8110f829d68!2sColville%2C+WA+99114!5e1!3m2!1sen!2sus!4v1412889483559" width="320" height="320" frameborder="0" style="border:0"></iframe>
-		</div>
-			
+
 
 		<!-- Second Row, Third Column -->
 		
 		<div class="grid_4 alpha">
-			<iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/7731970&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+	
 		</div>
 
 <!-- Third Row, second column -->
 	<div class="grid_4">
-			<h3>Video</h3>
-			<iframe width="100%" height="315" src="//www.youtube.com/embed/WUhOnX8qt3I" frameborder="0" allowfullscreen></iframe>
+
 		</div>
 <!-- No content after -->
 		<!-- Clearfix -->
