--- a/index.html
+++ b/index.html
@@ -16,23 +16,14 @@
 </head>
 <body>
 
-
-
-My name is Katie Dunn and I turned 21 this year.
-I hail from Colville, a small town north of Spokane Washington.
-In my free time I work on stories, doodle with my sister, watch shows with my boyfriend, and crush darkspawn in Ferelden. 
-
-
-
-
 <!-- No content before -->
 	<div class="container showgrid">
 		
 		<!-- First Column-->
 
-		<div class="grid_8 alpha">
-			<h1>Bio</h1>
-			<img src="http://img1.wikia.nocookie.net/__cb20121116001418/barney/images/f/f9/99455_Floating_Frog_on_a_Log_In_Use_Image.jpg">
+		<div class="grid_4 alpha">
+			<h1>Katie Dunn</h1>
+			<img src="img/me.jpg"  width="300" height="450" alt="Katie Dunn">
 
 		</div>
 
@@ -41,20 +32,9 @@ In my free time I work on stories, doodle with my sister, watch shows with my bo
 		<div class="grid_4 omega">
 
 		<h1>This is me</h1>
-		<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		</div>
-
- <!-- Second row, first column -->
-
-		<div class="grid_6 alpha">
-			<h1>Katie Dunn</h1>
-			<p>I am majoring in Journalism with Visual Communications Design as my minor. I chose this minor because I thought it would teach me useful techniques for whatever job I find myself in after college.</p>
-
+		<p> My name is Katie Dunn and I turned 21 this year.
+I hail from Colville, a small town north of Spokane Washington.
+In my free time I work on stories, doodle with my sister, watch shows with my boyfriend, and crush darkspawn in Ferelden.I am majoring in Journalism with Visual Communications Design as my minor. I chose this minor because I thought it would teach me useful techniques for whatever job I find myself in after college</p>
 		</div>
 	
 
@@ -73,10 +53,9 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		<!-- Third Row, Second Colum -->
 		<div class="grid_3 omega">
 			<h1>My Places</h1>
-
 		<ul>
-			<li></li>
-			<li></li>
+			<li><a href="http://easterneronline.com/">The Easterner Online</a></li>
+			<li><a href="https://github.com/">GitHub</a></li>
 			<li></li>
 		</ul>
 	</div>
