cleaned up content

--- a/index.html
+++ b/index.html
@@ -19,38 +19,28 @@
 <!-- No content before -->
 	<div class="container showgrid">
 		
-		<!-- First Column-->
+<!-- First Column-->
 
-		<div class="grid_4 alpha">
+		<div class="grid_8">
 			<h1>Katie Dunn</h1>
-			<img src="img/me.jpg"  width="300" height="450" alt="Katie Dunn">
+			<img src="img/me.jpg"  width="550" height="450" alt="Katie Dunn">
 
 		</div>
 
+<!-- Second Column in first row-->
 
-		<!-- Second Column in first row-->
-		<div class="grid_4 omega">
+	<div class="grid_4 omega">
 
 		<h1>This is me</h1>
 		<p> My name is Katie Dunn and I turned 21 this year.
-I hail from Colville, a small town north of Spokane Washington.
-In my free time I work on stories, doodle with my sister, watch shows with my boyfriend, and crush darkspawn in Ferelden.I am majoring in Journalism with Visual Communications Design as my minor. I chose this minor because I thought it would teach me useful techniques for whatever job I find myself in after college</p>
-		</div>
+		I hail from Colville, a small town north of Spokane Washington.
+		In my free time I work on stories, doodle with my sister, watch shows with my boyfriend, and crush darkspawn in Ferelden.I am majoring in Journalism with Visual Communications Design as my minor. I chose this minor because I thought it would teach me useful techniques for whatever job I find myself in after college</p>
+	</div>
 	
 
-<!-- Second Row, second column -->
+<!-- Second Row, first column -->
 		
-	<div class="grid_3">
-			<h1>My Places</h1>
-		<ul>
-			<li><a href="http://easterneronline.com/">The Easterner Online</a></li>
-			<li><a href="https://github.com/">GitHub</a></li>
-			<li></li>
-		</ul>
-
-
-		<!-- Third Row, Second Colum -->
-		<div class="grid_3 omega">
+	<div class="grid_3 alpha">
 
 					<h3>Additional Info</h3>
 
@@ -63,22 +53,23 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		
 	</div>
 
-		<!-- Third Row, First Column -->
-
 
 <!-- Second Row Second Column -->
-
-
-		<!-- Second Row, Third Column -->
-		
-		<div class="grid_4 alpha">
+	<div class="grid_5">
 	
-		</div>
+	</div>
 
-<!-- Third Row, second column -->
-	<div class="grid_4">
+<!-- Second Row, Third Column -->
+		
+	<div class="grid_4 omega">
+			<h1>My Places</h1>
+		<ul>
+			<li><a href="http://easterneronline.com/">The Easterner Online</a></li>
+			<li><a href="https://github.com/">GitHub</a></li>
+			<li></li>
+		</ul>
 
-		</div>
+	</div>
 <!-- No content after -->
 		<!-- Clearfix -->
 		<div class="clear"></div>
