--- a/index.html
+++ b/index.html
@@ -21,47 +21,33 @@
 		
 <!-- First Column-->
 
-		<div class="grid_8">
+		<div class="grid_4 omega">
 			<h1>Katie Dunn</h1>
-			<img src="img/me.jpg"  width="550" height="450" alt="Katie Dunn">
-
+			<img align;"middle" src="img/me.jpg"  width="550" height="450" alt="Katie Dunn">
 		</div>
+
 
 <!-- Second Column in first row-->
 
-	<div class="grid_4 omega">
+	<div class="grid_">
 
 		<h1>This is me</h1>
 		<p> My name is Katie Dunn and I turned 21 this year.
 		I hail from Colville, a small town north of Spokane Washington.
 		In my free time I work on stories, doodle with my sister, watch shows with my boyfriend, and crush darkspawn in Ferelden.I am majoring in Journalism with Visual Communications Design as my minor. I chose this minor because I thought it would teach me useful techniques for whatever job I find myself in after college</p>
 	</div>
-	
-
-<!-- Second Row, first column -->
-		
-	<div class="grid_3 alpha">
-
-					<h3>Additional Info</h3>
-
-		<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		
-	</div>
 
 
 <!-- Second Row Second Column -->
-	<div class="grid_5">
+	<div class="grid_">
+		<h3>Map</h3>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30652.136867441033!2d-117.90340338757312!3d48.53777393787007!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5362878add7b8c51%3A0x6fe5d8110f829d68!2sColville%2C+WA+99114!5e1!3m2!1sen!2sus!4v1412889483559" width="320" height="320" frameborder="0" style="border:0"></iframe>
 	
 	</div>
 
 <!-- Second Row, Third Column -->
 		
-	<div class="grid_4 omega">
+	<div class="grid_">
 			<h1>My Places</h1>
 		<ul>
 			<li><a href="http://easterneronline.com/">The Easterner Online</a></li>
