--- a/index.html
+++ b/index.html
@@ -18,10 +18,21 @@
 		
 <!-- First Column-->
 
-		<div class="grid_6" id="me">
+		<div class="grid_12">
 			<h1>Katie Dunn</h1>
+		</div>
+
+		<div id="me" class="grid_6 omega">
 			<img src="img/me.jpg"  width="450" height="350" alt="Katie Dunn">
 		</div>
+
+<!-- Major and Minor-->
+<div class="grid_4">
+
+<h2>Major &amp Minor</h2>
+I am majoring in Journalism with Visual Communications Design as my minor. I chose this minor because I thought it would teach me useful techniques for whatever job I find myself in after college.
+</div>
+
 
 
 <!-- Second Column in first row-->
@@ -31,7 +42,7 @@
 		<h2>This is me</h2>
 		<p> My name is Katie Dunn and I turned 21 this year.
 		I hail from Colville, a small town north of Spokane Washington.
-		In my free time I work on stories, doodle with my sister, watch shows with my boyfriend, and crush darkspawn in Ferelden.I am majoring in Journalism with Visual Communications Design as my minor. I chose this minor because I thought it would teach me useful techniques for whatever job I find myself in after college</p>
+		In my free time I work on stories, doodle with my sister, watch shows with my boyfriend, and crush darkspawn in Ferelden.</p>
 	</div>
 
 
@@ -40,11 +51,11 @@
 <!-- Second Row, Third Column -->
 		
 	<div class="grid_4">
-			<h2>My Places</h2>
+			<h2>Websites I Visit</h2>
 		<ul>
 			<li><a href="http://easterneronline.com/">The Easterner Online</a></li>
 			<li><a href="https://github.com/">GitHub</a></li>
-			<li></li>
+			<li><a href="http://www.deviantart.com/">deviantART</a></li>
 		</ul>
 
 	</div>
