--- a/index.html
+++ b/index.html
@@ -14,44 +14,34 @@
 <body>
 
 <!-- No content before -->
-	<div class="container showgrid">
+	<div id="box" class="container showgrid">
 		
-<!-- First Column-->
+<!-- First Column Row One-->
 
 		<div class="grid_12">
 			<h1>Katie Dunn</h1>
 		</div>
 
-		<div id="me" class="grid_6 omega">
+		<div id="me" class="grid_6">
 			<img src="img/me.jpg"  width="450" height="350" alt="Katie Dunn">
 		</div>
 
-<!-- Major and Minor-->
-<div class="grid_4">
-
-<h2>Major &amp Minor</h2>
-I am majoring in Journalism with Visual Communications Design as my minor. I chose this minor because I thought it would teach me useful techniques for whatever job I find myself in after college.
-</div>
-
-
-
-<!-- Second Column in first row-->
-
-	<div class="grid_6 omega">
-
-		<h2>This is me</h2>
+<!-- Second Column Row One Major and Minor-->
+<div class="grid_5">
+	<h2>This is me</h2>
 		<p> My name is Katie Dunn and I turned 21 this year.
 		I hail from Colville, a small town north of Spokane Washington.
 		In my free time I work on stories, doodle with my sister, watch shows with my boyfriend, and crush darkspawn in Ferelden.</p>
-	</div>
+	<h3>Major &amp Minor</h3>
+	I am majoring in Journalism with Visual Communications Design as my minor. I chose this minor because I thought it would teach me useful techniques for whatever job I find myself in after college.
+</div>
 
 
-<!-- Second Row Second Column -->
 	
 <!-- Second Row, Third Column -->
 		
-	<div class="grid_4">
-			<h2>Websites I Visit</h2>
+	<div class="grid_3 alpha">
+			<h3>Websites I Visit</h3>
 		<ul>
 			<li><a href="http://easterneronline.com/">The Easterner Online</a></li>
 			<li><a href="https://github.com/">GitHub</a></li>
@@ -59,6 +49,11 @@ I am majoring in Journalism with Visual Communications Design as my minor. I cho
 		</ul>
 
 	</div>
+
+
+
+
+
 <!-- No content after -->
 		<!-- Clearfix -->
 		<div class="clear"></div>
