began making a footer

--- a/index.html
+++ b/index.html
@@ -46,8 +46,16 @@
 			<li><a href="http://easterneronline.com/">The Easterner Online</a></li>
 			<li><a href="https://github.com/">GitHub</a></li>
 			<li><a href="http://www.deviantart.com/">deviantART</a></li>
+			<a href="mailto:kt.anne.dunn@gmail.com">Contact Me</a>
 		</ul>
 
+	</div>
+<a href="mailto:kt.anne.dunn@gmail.com">Contact Me</a>
+
+<!-- Footer -->
+
+	<div id="footer" class="grid_12">
+		<p>&lfloor;&copy; Dunn 2014&rceil;  &lceil;DESN 368 Web One&rfloor;</p>
 	</div>
 
 
