--- a/index.html
+++ b/index.html
@@ -13,63 +13,53 @@
 </head>
 <body>
 
-<!-- No content before -->
 	<div id="box" class="container showgrid">
-		
-<!-- First Column Row One-->
 
-		<div class="grid_12">
+		<header class="grid_12">
 			<h1>Katie Dunn</h1>
+		</header>
+
+<article>
+	<section>
+		<div id="me" class="grid_7 alpha">
+			<img src="img/me.jpg" alt="Katie Dunn">
 		</div>
+	</section>
 
-		<div id="me" class="grid_6">
-			<img src="img/me.jpg"  width="450" height="350" alt="Katie Dunn">
-		</div>
+	<section class="grid_5 omega">
+		<h2>This is me</h2>
+			<p> My name is Katie Dunn and I turned 21 this year.
+			I hail from Colville, a small town north of Spokane Washington.
+			In my free time I work on stories, doodle with my sister, watch shows with my boyfriend, and crush darkspawn in Ferelden.</p>
+	</section>
 
-<!-- Second Column Row One Major and Minor-->
-<div class="grid_5">
-	<h2>This is me</h2>
-		<p> My name is Katie Dunn and I turned 21 this year.
-		I hail from Colville, a small town north of Spokane Washington.
-		In my free time I work on stories, doodle with my sister, watch shows with my boyfriend, and crush darkspawn in Ferelden.</p>
-	<h3>Major &amp Minor</h3>
-	I am majoring in Journalism with Visual Communications Design as my minor. I chose this minor because I thought it would teach me useful techniques for whatever job I find myself in after college.
-</div>
-
-
-	
-<!-- Second Row, Third Column -->
+	<section>
+		<h3>Major &amp Minor</h3>
+		I am majoring in Journalism with Visual Communications Design as my minor. I chose this minor because I thought it would teach me useful techniques for whatever job I find myself in after college.
+	</section>
 		
-	<div class="grid_3 alpha">
+	<section class="grid_">
 			<h3>Websites I Visit</h3>
-		<ul>
-			<li><a href="http://easterneronline.com/">The Easterner Online</a></li>
-			<li><a href="https://github.com/">GitHub</a></li>
-			<li><a href="http://www.deviantart.com/">deviantART</a></li>
-			<a href="mailto:kt.anne.dunn@gmail.com">Contact Me</a>
-		</ul>
+				<ul>
+					<li><a href="http://easterneronline.com/">The Easterner Online</a></li>
+					<li><a href="https://github.com/">GitHub</a></li>
+					<li><a href="http://www.deviantart.com/">deviantART</a></li>
+					<a href="mailto:kt.anne.dunn@gmail.com">Contact Me</a>
+				</ul>
 
-	</div>
+	</section>
 <a href="mailto:kt.anne.dunn@gmail.com">Contact Me</a>
 
-<!-- Footer -->
+	</article>
 
-	<div id="footer" class="grid_12">
+	<footer id="footer" class="grid_12">
 		<p>&lfloor;&copy; Dunn 2014&rceil;  &lceil;DESN 368 Web One&rfloor;</p>
-	</div>
+	</footer>
 
 
-
-
-
-<!-- No content after -->
-		<!-- Clearfix -->
-		<div class="clear"></div>
+	<div class="clear"></div>
 
 	</div>
-
-
-	
   
 </body>
 </html>
