experimenting with fonts

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/grid.css">
   <link href='http://fonts.googleapis.com/css?family=Bitter' rel='stylesheet' type='text/css'>	
+ 	
+<link href='http://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
+
   <link rel="stylesheet" href="css/styles.css">	
 	
 </head>
@@ -21,24 +25,24 @@
 
 <article>
 	<section>
-		<div id="me" class="grid_7 alpha">
+		<div id="me" class="grid_7">
 			<img src="img/me.jpg" alt="Katie Dunn">
 		</div>
 	</section>
 
-	<section class="grid_5 omega">
+	<section class="grid_4 omega">
 		<h2>This is me</h2>
 			<p> My name is Katie Dunn and I turned 21 this year.
 			I hail from Colville, a small town north of Spokane Washington.
 			In my free time I work on stories, doodle with my sister, watch shows with my boyfriend, and crush darkspawn in Ferelden.</p>
 	</section>
 
-	<section>
+	<section class="grid_4">
 		<h3>Major &amp Minor</h3>
-		I am majoring in Journalism with Visual Communications Design as my minor. I chose this minor because I thought it would teach me useful techniques for whatever job I find myself in after college.
+		<p>I am majoring in Journalism with Visual Communications Design as my minor. I chose this minor because I thought it would teach me useful techniques for whatever job I find myself in after college.</p>
 	</section>
 		
-	<section class="grid_">
+	<section class="grid_4 omega">
 			<h3>Websites I Visit</h3>
 				<ul>
 					<li><a href="http://easterneronline.com/">The Easterner Online</a></li>
@@ -48,7 +52,11 @@
 				</ul>
 
 	</section>
-<a href="mailto:kt.anne.dunn@gmail.com">Contact Me</a>
+
+
+	<section class="grid_3 alpha">
+		<a href="mailto:kt.anne.dunn@gmail.com">Contact Me</a>
+	</section>
 
 	</article>
 
