--- a/index.html
+++ b/index.html
@@ -37,25 +37,28 @@
 			In my free time I work on stories, doodle with my sister, watch shows with my boyfriend, and crush darkspawn in Ferelden.</p>
 	</section>
 
-	<section class="grid_4">
+	<section class="grid_4 omega">
 		<h3>Major &amp Minor</h3>
 		<p>I am majoring in Journalism with Visual Communications Design as my minor. I chose this minor because I thought it would teach me useful techniques for whatever job I find myself in after college.</p>
 	</section>
 		
-	<section class="grid_4 omega">
+	<section class="grid_4 alpha">
 			<h3>Websites I Visit</h3>
 				<ul>
 					<li><a href="http://easterneronline.com/">The Easterner Online</a></li>
 					<li><a href="https://github.com/">GitHub</a></li>
 					<li><a href="http://www.deviantart.com/">deviantART</a></li>
-					<a href="mailto:kt.anne.dunn@gmail.com">Contact Me</a>
 				</ul>
 
 	</section>
 
 
-	<section class="grid_3 alpha">
-		<a href="mailto:kt.anne.dunn@gmail.com">Contact Me</a>
+	<section class="grid_4">
+		<h3>Contact Information</h3>
+			<ul>
+				<li>My Email: <a href="mailto:kt.anne.dunn@gmail.com">kt.anne.dunn@gmail.com</a><li>
+				<li> My Cell: 509.690.6763</li>
+			</ul>
 	</section>
 
 	</article>
