--- a/index.html
+++ b/index.html
@@ -50,16 +50,29 @@
 					<li><a href="http://www.deviantart.com/">deviantART</a></li>
 				</ul>
 
+			<h3>Contact Information</h3>
+				<ul>
+					<li>My Email: <a href="mailto:kt.anne.dunn@gmail.com">kt.anne.dunn@gmail.com</a><li>
+					<li> My Cell: 509.690.6763</li>
+				</ul>
+
+	</section>
+
+	<selection class="grid_4">
+		<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	</selection>
+
+
+	<section class="grid_4 alpha">
+	
 	</section>
 
 
-	<section class="grid_4">
-		<h3>Contact Information</h3>
-			<ul>
-				<li>My Email: <a href="mailto:kt.anne.dunn@gmail.com">kt.anne.dunn@gmail.com</a><li>
-				<li> My Cell: 509.690.6763</li>
-			</ul>
-	</section>
 
 	</article>
 
