--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 	<section class="grid_4 omega">
 		<h3>Major &amp Minor</h3>
-		<p>I am majoring in Journalism with Visual Communications Design as my minor. I chose this minor because I thought it would teach me useful techniques for whatever job I find myself in after college.</p>
+		<p>I am majoring in Journalism and minoring in Visual Communications Design. I chose this minor because I thought it would teach me useful techniques for whatever job I find myself in after college.</p>
 	</section>
 		
 	<section class="grid_4 alpha">
@@ -72,7 +72,7 @@
 	
 	</section>
 
-
+	<a href="http://fc05.deviantart.net/fs71/i/2012/317/2/d/you_are_the_sun_that_keeps_me_warm_by_kallavona-d5kx6o0.png"><img src="img/justme.png" alt="a representation of me"></a>
 
 	</article>
 
