--- a/index.html
+++ b/index.html
@@ -68,11 +68,12 @@
 	</selection>
 
 
-	<section class="grid_4 alpha">
+	<section id="special"class="grid_4 omega">
 	
-	</section>
 
-	<a href="http://fc05.deviantart.net/fs71/i/2012/317/2/d/you_are_the_sun_that_keeps_me_warm_by_kallavona-d5kx6o0.png"><img src="img/justme.png" alt="a representation of me"></a>
+	<a href="http://fc05.deviantart.net/fs71/i/2012/317/2/d/you_are_the_sun_that_keeps_me_warm_by_kallavona-d5kx6o0.png"><img src="img/justme2.png" alt="a representation of me"></a>
+
+	</section>
 
 	</article>
 
