--- a/index.html
+++ b/index.html
@@ -43,18 +43,21 @@
 	</section>
 		
 	<section class="grid_4 alpha">
+		<div class="visit">
 			<h3>Websites I Visit</h3>
 				<ul>
-					<li><a href="http://easterneronline.com/">The Easterner Online</a></li>
-					<li><a href="https://github.com/">GitHub</a></li>
-					<li><a href="http://www.deviantart.com/">deviantART</a></li>
+					<li><a href="http://easterneronline.com/" target="_blank">The Easterner Online</a></li>
+					<li><a href="https://github.com/" target="_blank">GitHub</a></li>
+					<li><a href="http://www.deviantart.com/" target="_blank">deviantART</a></li>
 				</ul>
-
+		</div>
+		<div class="contact">
 			<h3>Contact Information</h3>
 				<ul>
 					<li>My Email: <a href="mailto:kt.anne.dunn@gmail.com">kt.anne.dunn@gmail.com</a><li>
 					<li> My Cell: 509.690.6763</li>
 				</ul>
+		</div>		
 
 	</section>
 
@@ -71,7 +74,7 @@
 	<section id="special"class="grid_4 omega">
 	
 
-	<a href="http://fc05.deviantart.net/fs71/i/2012/317/2/d/you_are_the_sun_that_keeps_me_warm_by_kallavona-d5kx6o0.png"><img src="img/justme2.png" alt="a representation of me"></a>
+	<a href="http://fc05.deviantart.net/fs71/i/2012/317/2/d/you_are_the_sun_that_keeps_me_warm_by_kallavona-d5kx6o0.png" target="_blank"><img src="img/justme2.png" alt="a representation of me"></a>
 
 	</section>
 
