--- a/index.html
+++ b/index.html
@@ -31,10 +31,8 @@
 	</section>
 
 	<section class="grid_4 omega">
-		<h2>This is me</h2>
-			<p> My name is Katie Dunn and I turned 21 this year.
-			I hail from Colville, a small town north of Spokane Washington.
-			In my free time I work on stories, doodle with my sister, watch shows with my boyfriend, and crush darkspawn in Ferelden.</p>
+		<h2>Eastern</h2>
+			<p>In 2013 I transferred to Eastern Washington University with an AA from community college and not a single clue about what I had signed up for. Now I have a better understanding. Currently I live in the same Brewster suite I did last year. It has a nice view of an empty lot and it's perpetually cold in winter, but it's my home away from home.</p>
 	</section>
 
 	<section class="grid_4 omega">
@@ -62,12 +60,8 @@
 	</section>
 
 	<selection class="grid_4">
-		<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<h3>This is Me</h3>
+		<p> I hail from Colville, a small town north of Spokane Washington. Not much happens there, but even if it was a hub of activity it wouldn't matter because I'm usually in front of my computer. I turned 21 this August and to celebrate the occasion I stayed up all night playing bored games with some of my favorite people. In my free time I work on stories, doodle with my sister, watch shows with my boyfriend, and crush darkspawn in Ferelden.</p>
 	</selection>
 
 
