changes before bed

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 	<selection class="grid_4">
 		<h3>This is Me</h3>
-		<p> I hail from Colville, a small town north of Spokane Washington. Not much happens there, but even if it was a hub of activity it wouldn't matter because I'm usually in front of my computer. I turned 21 this August and to celebrate the occasion I stayed up all night playing bored games with some of my favorite people. In my free time I work on stories, doodle with my sister, watch shows with my boyfriend, and crush darkspawn in Ferelden.</p>
+		<p> I hail from Colville, a small town north of Spokane Washington. Not much happens there, but even if it was a hub of activity it wouldn't matter because I'm usually in front of my computer. I turned 21 this August and to celebrate the occasion I stayed up all night playing board games with some of my favorite people. In my free time I work on stories, doodle with my sister, watch shows with my boyfriend, and crush darkspawn in Ferelden.</p>
 	</selection>
 
 
