--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Katie Dunn</title>
 	
- <link rel="icon" href="favicon.ico">	
+ <link rel="icon" href="favicon2.ico">	
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/grid.css">
   <link href='http://fonts.googleapis.com/css?family=Bitter' rel='stylesheet' type='text/css'>	
