hover image added

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	<section id="special"class="grid_4 omega">
 	
 
-	<a href="http://fc05.deviantart.net/fs71/i/2012/317/2/d/you_are_the_sun_that_keeps_me_warm_by_kallavona-d5kx6o0.png" target="_blank"><img src="img/justme2.png" alt="a representation of me"></a>
+	<a href="http://fc05.deviantart.net/fs71/i/2012/317/2/d/you_are_the_sun_that_keeps_me_warm_by_kallavona-d5kx6o0.png" target="_blank"><img src="img/justme2.png" onmouseover="this.src='img/just_me.png'" onmouseout="this.src='img/justme2.png'"></a>
 
 	</section>
 
