--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
 				<ul>
 					<li><a href="http://easterneronline.com/" target="_blank">The Easterner Online</a></li>
 					<li><a href="https://github.com/" target="_blank">GitHub</a></li>
-					<li><a href="http://www.deviantart.com/" target="_blank">deviantART</a></li>
+					<li><a href="http://codepen.io/" target="_blank">CodePen</a></li>
+					<li><a href="http://www.deviantart.com/" target="_blank">deviantART</a></li> 
+					<li><a href="http://dragonage.wikia.com/wiki/Dragon_Age_Wiki" tagrte="_blank">Dragon Age Wiki</a></li>
+
 				</ul>
 		</div>
 		<div class="contact">
