--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		</div>
 	</section>
 
-<div>
+
 	<section class="grid_4 omega">
 		<h2>Eastern</h2>
 			<p>In 2013 I transferred to Eastern Washington University with an AA from community college and not a single clue about what I had signed up for. Now I have a better understanding. Currently I live in the same Brewster suite as last year. It has a nice view of an empty lot and it's perpetually cold in winter, but it's my home away from home.</p>
@@ -42,8 +42,7 @@
 		<h3>Major &amp Minor</h3>
 		<p>I am majoring in Journalism and minoring in Visual Communications Design. I chose this minor because I thought it would teach me useful techniques for whatever job I find myself in after college.</p>
 	</section>
-</div>
-		
+
 	<section class="grid_4 alpha">
 		<div class="visit">
 			<h3>Websites I Visit</h3>
@@ -56,11 +55,12 @@
 
 				</ul>
 		</div>
-		<div class="contact">
-			<h3>Contact Information</h3>
+		<div id="dashbox" class="contact">
+			<h4>Contact Information</h4>
 				<ul>
 					<li>My Email: <a href="mailto:kt.anne.dunn@gmail.com">kt.anne.dunn@gmail.com</a><li>
-					<li> My Cell: 509.690.6763</li>
+					<li> My Cell:</li> 
+					<li>509.690.6763</li>
 				</ul>
 		</div>		
 
