--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 	<section class="grid_4 omega">
 		<h3>Major &amp Minor</h3>
-		<p>I am majoring in Journalism and minoring in Visual Communications Design. I chose this minor because I thought it would teach me useful techniques for whatever job I find myself in after college.</p>
+		<p>I am majoring in Journalism and minoring in Visual Communication Design. I chose this minor because I thought it would teach me useful techniques for whatever job I find myself in after college.</p>
 	</section>
 
 	<section class="grid_4 alpha">
@@ -58,7 +58,8 @@
 		<div id="dashbox" class="contact">
 			<h4>Contact Information</h4>
 				<ul>
-					<li>My Email: <a href="mailto:kt.anne.dunn@gmail.com">kt.anne.dunn@gmail.com</a><li>
+					<li>My Email:</li>
+					<li><a href="mailto:kt.anne.dunn@gmail.com">kt.anne.dunn@gmail.com</a><li>
 					<li> My Cell:</li> 
 					<li>509.690.6763</li>
 				</ul>
